# cpp-core

./: .gitignore  CMakeLists.txt  core_premake.lua  premake.bat  premake.lua  premake5.lua
data/: game.data  game.json
data/shaders/: basic_fs.glsl  basic_vs.glsl
include/: imgui_user.h
include/core/: Application.h  Assert.h  AudioFile.h  AudioManager.h  AudioPlayer.h  AudioSample.h  BinarySerializer.h  ClassDesc.h  ClassDesc.inl  Clock.h  EditorAudio.h  Factory.h  Fbx.h  HashTools.h  JsonSerializer.h  JsonTools.h  Locator.h  Log.h  Node.h  PortaudioTools.h  Reflection.h  Resource.h  ResourceManager.h  Serializer.h  Serializer.inl  ShaderManager.h  StringHash.h  SystemClock.h  Time.h
project/vs2012/: imgui.ini  playground.sln  playground.vcxproj  playground.vcxproj.filters
src/: Application.cpp  Application.h  BinarySerializer.h  BlonkApp.cpp  BlonkApp.h  Box.cpp  Box.h  ClassDesc.cpp  Clock.h  File.cpp  File.h  Log.h  SandboxApp.cpp  SandboxApp.h  Serializable.cpp  Serializable.h  Serializer.cpp  Serializer.h  ShaderManager.h  StringHash.h  Transform.cpp  Transform.h  ZonkApp.cpp  ZonkApp.h  imgui_impl_sfml.cpp  imgui_user.cpp  imgui_user.h  main.cpp  stdafx.h
src/adventure/: Object.cpp  Object.h  Room.cpp  Room.h  World.cpp  World.h
src/core/: Application.cpp  Application.h  Assert.h  AudioFile.cpp  AudioFile.h  AudioManager.cpp  AudioManager.h  AudioPlayer.cpp  AudioPlayer.h  AudioSample.cpp  AudioSample.h  BinarySerializer.cpp  BinarySerializer.h  Camera.cpp  Camera.h  ClassDesc.cpp  ClassDesc.h  ClassDesc.inl  Clock.cpp  Clock.h  EditorAudio.cpp  EditorAudio.h  Factory.cpp  Factory.h  Factory.inl  Fbx.cpp  Fbx.h  File.cpp  File.h  FileHandle.cpp  HashTools.h  (+52 more)
